fix: issue with map heights on Safari (Mac)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,8 @@ body {
     border-radius: 3px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: max-content;
+    grid-template-rows: auto;
     padding: 1rem;
-    height: 100%;
 }
 
 
@@ -128,14 +127,13 @@ body {
 }
 
 .main-content-container {
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
 #map {
     height: 100%;
-    min-height: 20vh;
+    min-height: 45vh;
     border-radius: 10px;
     box-shadow: 2.5px 5px 10px -5px rgba(0, 0, 0, 0.2);
 }
